# transmag

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/examples/: PIPELINE.md  TRANSFORMER.md
src/datasets/: __init__.py  _load_patch_fit_sample.py
src/datasets/fit_samples/: hmi.sharp_patch_sample_1_TAI.magnetogram.fits  hmi.sharp_patch_sample_2_TAI.bitmap.fits
src/pipeline/: __init__.py
src/pipeline/tests/: test_pipeline.py
src/transformers/: __init__.py  _byte_scaling_transformer.py  _denoise_transformer.py  _flip_transformer.py  _gaussian_blur_transformer.py  _informative_patch_transformer.py  _invert_polarity_transformer.py  _pad_transformer.py  _random_noise_transformer.py  _rotation_transformer.py
src/transformers/tests/: test_bitmap_cropping_transformer.py  test_byte_scaling_transformer.py  test_denoise_transformer.py  test_flip_transformer.py  test_gaussian_blur_transformer.py  test_informative_patch_transformer.py  test_invert_polarity_transformer.py  test_pad_transformer.py  test_random_noise_transformer.py  test_resize_by_half_transformer.py  test_rotation_transformer.py
src/utils/: exceptions.py
transmag/: __init__.py
transmag/datasets/: _load_patch_fit_sample.py
transmag/datasets/fit_samples/: hmi.sharp_patch_sample_1_TAI.bitmap.fits  hmi.sharp_patch_sample_2_TAI.magnetogram.fits
transmag/pipeline/: _pipeline.py
transmag/pipeline/tests/: test_pipeline.py
transmag/transformers/: _bitmap_cropping_transformer.py  _byte_scaling_transformer.py  _denoise_transformer.py  _flip_transformer.py  _gaussian_blur_transformer.py  _histogram_equalizer_transformer.py  _informative_patch_transformer.py  _invert_polarity_transformer.py  _pad_transformer.py  _random_noise_transformer.py  _resize_by_half_transformer.py  _rotation_transformer.py.bak
transmag/transformers/tests/: test_bitmap_cropping_transformer.py  test_byte_scaling_transformer.py  test_denoise_transformer.py  test_flip_transformer.py  test_gaussian_blur_transformer.py  test_informative_patch_transformer.py  test_invert_polarity_transformer.py  test_pad_transformer.py  test_random_noise_transformer.py  test_resize_by_half_transformer.py  test_rotation_transformer.py
transmag/utils/: __init__.py  helper.py  logger.py
