[metadata]
name = transmag
provides = transmag
description = "Magnetogram Transformers: A Python Toolkit for Transforming and Enhancing Magnetogram fits"
version = 1.1.5
long_description = file: README.md
long_description_content_type = text/markdown
author = Temitope Adeyeha
author_email = tadeyeha1@student.gsu.edu
license = GPL-3.0-or-later
license_file = LICENSE.txt
url = https://github.com/Adeyeha/transmag
platform = any
keywords = solar, space weather, mvts, imbalance, sampling, features, augmentation, magnetogram, bitmap, fits
# Keys & values must be chosen from: https://pypi.org/classifiers/
# # 1 - Planning, 2 - Pre-Alpha, 3 - Alpha, 4 - Beta, 5 - Production/Stable
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Information Analysis
project_urls =
        Documentation = https://github.com/Adeyeha/transmag/blob/master/docs/examples/TRANSFORMER.md
        Source Code = https://github.com/Adeyeha/transmag
        Bug Tracker = https://github.com/Adeyeha/transmag/issues
        Pull Request = https://github.com/Adeyeha/transmag/pulls

[options]
packages = find:

python_requires = >=3.9

zip_safe = False

install_requires =
    numpy>=1.17.0
    scipy>=1.3.0
    astropy>=5.0.6,!=5.1.0
        
include_package_data = True

setup_requires =
  setuptools_scm

[options.packages.find]
include = transmag*